@@ -1,6 +1,6 @@
 lib_LTLIBRARIES = libvoikko.la
 libvoikko_la_SOURCES = spellchecker/spell.cpp spellchecker/suggestions.cpp \
-                       utils/utils.cpp \
+                       utils/utils.cpp utils/StringUtils.cpp \
                        setup/setup.cpp setup/Dictionary.cpp setup/DictionaryLoader.cpp \
                        setup/DictionaryException.cpp \
                        hyphenator/hyphenator.cpp character/charset.cpp \
@@ -10,7 +10,7 @@ libvoikko_la_SOURCES = spellchecker/spell.cpp spellchecker/suggestions.cpp \
 libvoikko_la_LDFLAGS = -lmalaga -no-undefined -version-info 9:0:8 @LIBLDFLAGSWIN@
 
 pkginclude_HEADERS = voikko.h
-noinst_HEADERS = utils/utils.hpp \
+noinst_HEADERS = utils/utils.hpp utils/StringUtils.hpp \
                  setup/setup.hpp setup/Dictionary.hpp setup/DictionaryLoader.hpp \
                  setup/DictionaryException.hpp \
                  character/charset.hpp \
